--- a/OyuncuListesi.resx
+++ b/OyuncuListesi.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema
+    Microsoft ResX Schema 
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -126,14 +126,10 @@
     <value>Segoe UI, 12pt, style=Bold, Italic</value>
   </data>
   <data name="btnsil.Location" type="System.Drawing.Point, System.Drawing">
-    <value>511, 57</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="btnsil.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 4, 3, 4</value>
+    <value>412, 43</value>
   </data>
   <data name="btnsil.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 41</value>
+    <value>60, 31</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnsil.TabIndex" type="System.Int32, mscorlib">
@@ -161,10 +157,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>155, 36</value>
+    <value>123, 27</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>105, 32</value>
+    <value>85, 25</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
@@ -191,10 +187,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>141, 3</value>
+    <value>110, 2</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>123, 32</value>
+    <value>98, 25</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
@@ -221,10 +217,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblID.Location" type="System.Drawing.Point, System.Drawing">
-    <value>506, 3</value>
+    <value>408, 2</value>
   </data>
   <data name="lblID.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 32</value>
+    <value>61, 25</value>
   </data>
   <data name="lblID.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -254,10 +250,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblCinsiyet.Location" type="System.Drawing.Point, System.Drawing">
-    <value>258, 37</value>
+    <value>203, 28</value>
   </data>
   <data name="lblCinsiyet.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 32</value>
+    <value>61, 25</value>
   </data>
   <data name="lblCinsiyet.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -284,13 +280,10 @@
     <value>Segoe UI, 12pt, style=Bold, Italic</value>
   </data>
   <data name="btndetay.Location" type="System.Drawing.Point, System.Drawing">
-    <value>389, 57</value>
-  </data>
-  <data name="btndetay.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 4, 3, 4</value>
+    <value>305, 43</value>
   </data>
   <data name="btndetay.Size" type="System.Drawing.Size, System.Drawing">
-    <value>117, 41</value>
+    <value>102, 31</value>
   </data>
   <data name="btndetay.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -311,16 +304,13 @@
     <value>5</value>
   </data>
   <data name="pBResim.Location" type="System.Drawing.Point, System.Drawing">
-    <value>17, 4</value>
-  </data>
-  <data name="pBResim.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 4, 3, 4</value>
+    <value>8, 3</value>
   </data>
   <data name="pBResim.Size" type="System.Drawing.Size, System.Drawing">
-    <value>114, 95</value>
+    <value>100, 71</value>
   </data>
   <data name="pBResim.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
-    <value>Zoom</value>
+    <value>StretchImage</value>
   </data>
   <data name="pBResim.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
@@ -344,10 +334,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblAdSoyad.Location" type="System.Drawing.Point, System.Drawing">
-    <value>259, 4</value>
+    <value>204, 3</value>
   </data>
   <data name="lblAdSoyad.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 32</value>
+    <value>61, 25</value>
   </data>
   <data name="lblAdSoyad.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -373,11 +363,8 @@
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
-  <data name="panel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 4, 3, 4</value>
-  </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>6, 103</value>
+    <value>5, 77</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -398,10 +385,14 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>8, 20</value>
+    <value>7, 15</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 2, 3, 2</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>586, 103</value>
+    <value>477, 77</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>OyuncuListesi</value>
