--- a/OyuncuListesi.resx
+++ b/OyuncuListesi.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -126,10 +126,14 @@
     <value>Segoe UI, 12pt, style=Bold, Italic</value>
   </data>
   <data name="btnsil.Location" type="System.Drawing.Point, System.Drawing">
-    <value>412, 43</value>
+    <value>466, 57</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="btnsil.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
   </data>
   <data name="btnsil.Size" type="System.Drawing.Size, System.Drawing">
-    <value>60, 31</value>
+    <value>69, 41</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="btnsil.TabIndex" type="System.Int32, mscorlib">
@@ -157,10 +161,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>123, 27</value>
+    <value>141, 36</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 25</value>
+    <value>105, 32</value>
   </data>
   <data name="label2.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
@@ -187,10 +191,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>110, 2</value>
+    <value>126, 3</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>98, 25</value>
+    <value>123, 32</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
@@ -217,10 +221,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblID.Location" type="System.Drawing.Point, System.Drawing">
-    <value>408, 2</value>
+    <value>462, 3</value>
   </data>
   <data name="lblID.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 25</value>
+    <value>76, 32</value>
   </data>
   <data name="lblID.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -250,10 +254,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblCinsiyet.Location" type="System.Drawing.Point, System.Drawing">
-    <value>203, 28</value>
+    <value>243, 37</value>
   </data>
   <data name="lblCinsiyet.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 25</value>
+    <value>76, 32</value>
   </data>
   <data name="lblCinsiyet.TabIndex" type="System.Int32, mscorlib">
     <value>17</value>
@@ -280,10 +284,13 @@
     <value>Segoe UI, 12pt, style=Bold, Italic</value>
   </data>
   <data name="btndetay.Location" type="System.Drawing.Point, System.Drawing">
-    <value>305, 43</value>
+    <value>344, 57</value>
+  </data>
+  <data name="btndetay.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
   </data>
   <data name="btndetay.Size" type="System.Drawing.Size, System.Drawing">
-    <value>102, 31</value>
+    <value>117, 41</value>
   </data>
   <data name="btndetay.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -304,10 +311,13 @@
     <value>5</value>
   </data>
   <data name="pBResim.Location" type="System.Drawing.Point, System.Drawing">
-    <value>8, 3</value>
+    <value>9, 4</value>
+  </data>
+  <data name="pBResim.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
   </data>
   <data name="pBResim.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 71</value>
+    <value>114, 95</value>
   </data>
   <data name="pBResim.SizeMode" type="System.Windows.Forms.PictureBoxSizeMode, System.Windows.Forms">
     <value>StretchImage</value>
@@ -334,10 +344,10 @@
     <value>Segoe UI Semibold, 14.25pt, style=Bold</value>
   </data>
   <data name="lblAdSoyad.Location" type="System.Drawing.Point, System.Drawing">
-    <value>204, 3</value>
+    <value>244, 4</value>
   </data>
   <data name="lblAdSoyad.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 25</value>
+    <value>76, 32</value>
   </data>
   <data name="lblAdSoyad.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -363,8 +373,11 @@
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
+  <data name="panel1.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>3, 4, 3, 4</value>
+  </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>5, 77</value>
+    <value>6, 103</value>
   </data>
   <data name="panel1.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -385,14 +398,10 @@
     <value>True</value>
   </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 15</value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>3, 2, 3, 2</value>
+    <value>8, 20</value>
   </data>
   <data name="$this.Size" type="System.Drawing.Size, System.Drawing">
-    <value>477, 77</value>
+    <value>542, 103</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>OyuncuListesi</value>
