--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -148,9 +148,6 @@
   <data name="fotografyok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fotografyok.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="kapalıkilit" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\kapalıkilit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="reyting" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reyting.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,14 +160,17 @@
   <data name="videography" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\videography.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bayrak_T" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bayrak_T.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="7+" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\7+.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="carpi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\carpi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="video-camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\video-camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ErkekSimgesi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ErkekSimgesi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ticket" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ticket.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -199,8 +199,8 @@
   <data name="koltukikonu" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\koltukikonu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="video-camera" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\video-camera.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bayrak_T" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bayrak_T.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Aksiyon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Aksiyon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,8 +217,8 @@
   <data name="Aksiyon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Aksiyon1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="ErkekSimgesi" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ErkekSimgesi.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="kapalıkilit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\kapalıkilit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Fantastik" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Fantastik.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -235,10 +235,13 @@
   <data name="olumsuzornek" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\olumsuzornek.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tik" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tik.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="fotografyok1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fotografyok1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="tik" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tik.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="uyari" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\uyari.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
